# bigint-benchmark-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: benchmark.yml
src/: digits_of_e.rs  main.rs  number.rs
