[package]
name = "bigint-benchmark"
version = "0.4.0"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2021"
description = "Benchmarks for big integer implementations"
keywords = ["bigint", "bignum", "mathematics", "benchmark"]
categories = ["mathematics"]
license = "MIT"
repository = "https://github.com/tczajka/bigint-benchmark-rs"
homepage = "https://github.com/tczajka/bigint-benchmark-rs"
readme = "README.md"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.4.0", features = ["cargo"] }
dashu = "0.3.1"
ibig = "0.3.6"
malachite = "0.4.0"
num-bigint = "0.4.4"
rug = "1.21.0"
