[package]
name = "bigint-benchmark"
version = "0.3.0"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2018"
description = "Benchmarks for big integer implementations"
keywords = ["bigint", "bignum", "mathematics", "benchmark"]
categories = ["mathematics"]
license = "MIT"
repository = "https://github.com/tczajka/bigint-benchmark-rs"
homepage = "https://github.com/tczajka/bigint-benchmark-rs"
readme = "README.md"

[dependencies]
clap = "2.33.3"
ibig = "0.3.4"
num-bigint = "0.4.3"
rug = "1.17.0"
malachite = "0.3.0"
