[package]
name = "bigint-benchmark"
version = "0.3.0"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2021"
description = "Benchmarks for big integer implementations"
keywords = ["bigint", "bignum", "mathematics", "benchmark"]
categories = ["mathematics"]
license = "MIT"
repository = "https://github.com/tczajka/bigint-benchmark-rs"
homepage = "https://github.com/tczajka/bigint-benchmark-rs"
readme = "README.md"

[dependencies]
clap = { version = "4.4.3", features = ["cargo"] }
ibig = "0.3.6"
num-bigint = "0.4.4"
rug = "1.22.0"
malachite = "0.4.0"
dashu = "0.4.0"

[profile.release]
lto = true
